# Customer-Support-OpenEnv-Environment

./: .gitignore  README.md  baseline_rule.py  inference.py  inference_hf.py  package-lock.json  pyproject.toml  quick_test.py  requirements.txt
env/: models.py
server/: app.py
