[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-env"
version = "0.1.0"
description = "Customer Support Environment for OpenEnv - AI agent for customer service automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv>=0.1.0",
    "pydantic>=2.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "gradio>=4.0.0"
]

[project.scripts]
run-baseline = "inference:main"
run-hf = "inference_hf:main"
server = "server.app:main"

[tool.setuptools]
py-modules = ["inference", "inference_hf", "quick_test", "test_env"]
packages = ["env", "server"]
